Removed whitespace from fixtures to prevent crossbrowser issues on testing

--- a/test/fixtures/more.css
+++ b/test/fixtures/more.css
@@ -1,3 +1,1 @@
-.jasmineFixture {
-	box-sizing: content-box;
-}
+.jasmineFixture {box-sizing: content-box;}
