--- a/test/fixtures/style.css
+++ b/test/fixtures/style.css
@@ -1,3 +1,1 @@
-.jasmineFixture {
-	box-sizing: border-box;
-}
+.jasmineFixture {box-sizing: border-box;}
